 distrXXX family as a whole in order to ease updating "depends" 
 information)
 
##############
v 2.5
##############

user-visible CHANGES:

GENERAL ENHANCEMENTS:
+ cleaned DESCRIPTION and NAMESPACE file as to Imports/Depends

under the hood:
+ added .Rbuildignore
+ exported some routines which had been internal so far to
  avoid calls by :::

BUGFIXES:
+ fixed .makedotsPt -issue discovered by Gerald --> thx
+ moved generics to "distribution" and "samplesize" to pkg distr to avoid 
   conflict with pkg distrMod


##############
v 2.4
##############

user-visible CHANGES:


GENERAL ENHANCEMENTS:

LatticeDistribution:::
+ revised initialize and convolution methods, and generating function
-> new routine to determine the smallest common grid for convolution
+ Taking up proposal by Baoyue Li, b.li@erasmusmc.nl,  
   plot methods for distribution objects gain functionality to modify xlab and ylab


under the hood:
+ introduce .Rbuildignore files 
+ require no longer called in .onAttach
+ created folder vignettes and moved content of inst/doc/ to it
+ removed lazyload tag in DESCRIPTION
+ updated affiliation info in newDistributions.Rnw
+ deleted inst/doc folder
+ added DESCRIPTION tag "ByteCompile" to all our packages
+ updating maintainer email address and URL.
+ added argument no.readonly = TRUE to assignments of form opar <- par()
+ unified dots-manipulations
+ put some examples in "\dontrun" to reduce check time on CRAN
+ introduced new option warn.makeDNew to suppress annoying warnings when dealing with GEVD
+ deleted no longer needed chm folders


BUGFIXES:

+ fixed an error in show method for UnivarLebDecDistribution: 
  match.call() threw an error
+ fixed problems with .makeDNew - as .makeDNew is not exported
+ error in definition of Beta() --- d slot was wrong
+ corrected typo (inifinite...)
+ typo in Beta-class.Rd (only in TeX mode) discovered by Thomas Kirschenmann, thk3421@gmail.com
+ fixed some issue with X^a, X distribution, a a number ...